--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
+
+                    <suiteXmlFiles>
+                        <suiteXmlFile>target/test-classes/group.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
                 <dependencies>
                     <dependency>
