--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,6 @@
-url=https://aqa04onl01.testrail.io/
-browser=edge
+url=https://aqa21.testrail.io/
+browser=chrome
 headless=false
+username=atrostyanko+aqa21@gmail.com
+password=Qwertyu#1
 timeout=10
