домашнее задание по 6 занятию

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-url=https://aqa21.testrail.io/
+url=http://13gp.by/informatsiya/meditsinskie-kalkulyatory/995-raschet-skorosti-klubochkovoj-filtratsii-skf
 browser=chrome
 headless=false
 username=atrostyanko+aqa21@gmail.com
