ci cd изменили пароль

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-url=https://olg09.testrail.io/index.php?/dashboard
+url=https://test.testrail.io/
 browser=chrome
 headless=false
 username=telesh.olya@mail.ru
